responsive sponsors section, updating content, responsive jams across site

--- a/style.css
+++ b/style.css
@@ -1061,6 +1061,7 @@ em {
   max-width: 780px;
   width: 100%;
   color: #9f916f;
+  margin-bottom: 20px;
 }
 @media (min-width: 700px) {
   /* line 342, src/style.scss */
@@ -1070,8 +1071,31 @@ em {
   }
 }
 
-/* line 354, src/style.scss */
-.team-signatures {
+/* line 355, src/style.scss */
+.team-signature {
+  max-width: 120px;
+  width: 100%;
+  display: inline;
+  margin-right: 15px;
+}
+/* line 361, src/style.scss */
+.team-signature:last-child {
+  margin-right: 0px;
+}
+/* line 365, src/style.scss */
+.team-signature img {
+  max-width: 95px;
+  width: 100%;
+}
+@media (min-width: 700px) {
+  /* line 371, src/style.scss */
+  .team-signature img {
+    max-width: 111px;
+  }
+}
+
+/* line 377, src/style.scss */
+.team-signatures-orig {
   max-width: 750px;
   width: 100%;
 }
@@ -1079,7 +1103,7 @@ em {
 /* ============================================= */
 /*	Raffle-TZ     						   		 */
 /* ============================================= */
-/* line 368, src/style.scss */
+/* line 391, src/style.scss */
 .raffle-tz {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   height: 515px;
@@ -1089,7 +1113,7 @@ em {
   outline: 1px solid #eeeeee;
 }
 
-/* line 377, src/style.scss */
+/* line 400, src/style.scss */
 .raffle-ticket-mod {
   border: 1px solid;
   border-color: #817351;
@@ -1114,7 +1138,7 @@ em {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 }
 
-/* line 398, src/style.scss */
+/* line 421, src/style.scss */
 .raffle-inside {
   padding: 40px;
   border: 3px dashed;
@@ -1134,7 +1158,7 @@ em {
   clear: both;
 }
 
-/* line 407, src/style.scss */
+/* line 430, src/style.scss */
 .raffle-hdr {
   background: url(/wp-content/themes/spokes/images/raffle-hdr.png) no-repeat 50% 50%;
   background-size: 100%;
@@ -1142,7 +1166,7 @@ em {
   margin-bottom: 70px;
 }
 
-/* line 414, src/style.scss */
+/* line 437, src/style.scss */
 .raffle-name-mod {
   position: relative;
   border-bottom: 3px solid;
@@ -1150,14 +1174,14 @@ em {
   margin-bottom: 80px;
 }
 
-/* line 421, src/style.scss */
+/* line 444, src/style.scss */
 .raffle-prize-mod {
   position: relative;
   border-bottom: 3px solid;
   border-color: #5d4e2e;
 }
 
-/* line 427, src/style.scss */
+/* line 450, src/style.scss */
 .raffle-name-title, .raffle-prize-title {
   text-align: left;
   font: 600 20px/120% "freight-text-pro";
@@ -1169,13 +1193,13 @@ em {
   display: none;
 }
 @media (min-width: 700px) {
-  /* line 427, src/style.scss */
+  /* line 450, src/style.scss */
   .raffle-name-title, .raffle-prize-title {
     display: block;
   }
 }
 
-/* line 442, src/style.scss */
+/* line 465, src/style.scss */
 .raffle-name, .raffle-prize {
   text-align: left;
   font: 600 25px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -1187,14 +1211,14 @@ em {
   margin-left: 0px;
 }
 @media (min-width: 700px) {
-  /* line 442, src/style.scss */
+  /* line 465, src/style.scss */
   .raffle-name, .raffle-prize {
     font-size: 30px;
     margin-left: 80px;
   }
 }
 @media (min-width: 900px) {
-  /* line 442, src/style.scss */
+  /* line 465, src/style.scss */
   .raffle-name, .raffle-prize {
     font-size: 35px;
   }
@@ -1203,14 +1227,14 @@ em {
 /* ============================================= */
 /*	About       						   		 */
 /* ============================================= */
-/* line 471, src/style.scss */
+/* line 495, src/style.scss */
 .team-profiles {
   border-bottom: 1px solid;
   border-color: #eee;
   font: 400 18px/150% "freight-text-pro";
 }
 @media (min-width: 401px) and (max-width: 800px) {
-  /* line 471, src/style.scss */
+  /* line 495, src/style.scss */
   .team-profiles {
     margin-left: -50px;
     *zoom: 1;
@@ -1237,7 +1261,7 @@ em {
   }
 }
 @media (min-width: 801px) {
-  /* line 471, src/style.scss */
+  /* line 495, src/style.scss */
   .team-profiles {
     margin-left: -50px;
     *zoom: 1;
@@ -1268,23 +1292,23 @@ em {
   }
 }
 
-/* line 485, src/style.scss */
+/* line 509, src/style.scss */
 .team-member {
   margin-bottom: 50px;
 }
-/* line 488, src/style.scss */
+/* line 512, src/style.scss */
 .team-member:last-child {
   margin-bottom: 0px;
 }
 
-/* line 493, src/style.scss */
+/* line 517, src/style.scss */
 .rider-img {
   max-width: 138px;
   width: 100%;
   margin: 0 auto;
 }
 
-/* line 499, src/style.scss */
+/* line 523, src/style.scss */
 .rider-img-mod {
   text-align: center;
   margin-bottom: 20px;
@@ -1293,7 +1317,7 @@ em {
 /* ============================================= */
 /*	Blog-Feed    						   		 */
 /* ============================================= */
-/* line 512, src/style.scss */
+/* line 536, src/style.scss */
 .blog-feed {
   margin: 0 auto;
   text-align: center;
@@ -1301,7 +1325,7 @@ em {
   border-color: #eee;
 }
 
-/* line 522, src/style.scss */
+/* line 546, src/style.scss */
 .blog-post-tz {
   margin: 0 auto 50px auto;
   border: 1px solid;
@@ -1320,13 +1344,13 @@ em {
   min-height: 300px;
 }
 
-/* line 540, src/style.scss */
+/* line 564, src/style.scss */
 .post-date-mod {
   width: 131px;
   height: 260px;
 }
 
-/* line 545, src/style.scss */
+/* line 569, src/style.scss */
 .post-date {
   background-color: #9f916f;
   padding: 10px;
@@ -1343,19 +1367,19 @@ em {
 /* ============================================= */
 /*	Blog-Post   						   		 */
 /* ============================================= */
-/* line 566, src/style.scss */
+/* line 590, src/style.scss */
 .post-intro-img {
   max-height: 786px;
   overflow: hidden;
   margin: 0 auto;
   text-align: center;
 }
-/* line 572, src/style.scss */
+/* line 596, src/style.scss */
 .post-intro-img img {
   width: 100%;
 }
 
-/* line 578, src/style.scss */
+/* line 602, src/style.scss */
 .post-content-topper, .post-content-mod {
   margin: 0 auto;
   max-width: 780px;
@@ -1364,7 +1388,7 @@ em {
   position: relative;
 }
 
-/* line 586, src/style.scss */
+/* line 610, src/style.scss */
 .post-content-topper {
   border-top: 1px solid;
   border-left: 1px solid;
@@ -1377,28 +1401,28 @@ em {
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
 
-/* line 596, src/style.scss */
+/* line 620, src/style.scss */
 .post-content-mod {
   max-width: 779px;
   margin-top: -140px;
   padding: 30px 10px 10px 10px;
 }
-/* line 601, src/style.scss */
+/* line 625, src/style.scss */
 .post-content-mod p {
   font: 20px/160% "freight-text-pro";
   margin-bottom: 28px;
 }
-/* line 606, src/style.scss */
+/* line 630, src/style.scss */
 .post-content-mod > img {
   width: 100%;
 }
-/* line 610, src/style.scss */
+/* line 634, src/style.scss */
 .post-content-mod .section-h1 {
   font-size: 18px;
   margin-bottom: 40px;
 }
 @media (min-width: 401px) {
-  /* line 596, src/style.scss */
+  /* line 620, src/style.scss */
   .post-content-mod {
     padding: 30px 80px 80px 80px;
   }
@@ -1407,7 +1431,7 @@ em {
 /* ============================================= */
 /*	History-Page   						   		 */
 /* ============================================= */
-/* line 628, src/style.scss */
+/* line 652, src/style.scss */
 .history-list-mod {
   margin: 0 auto;
   text-align: center;
@@ -1415,13 +1439,13 @@ em {
   padding: 0px 10px;
 }
 @media (min-width: 900px) {
-  /* line 628, src/style.scss */
+  /* line 652, src/style.scss */
   .history-list-mod {
     padding: 0px;
   }
 }
 
-/* line 639, src/style.scss */
+/* line 663, src/style.scss */
 .history-year {
   max-width: 500px;
   width: 100%;
@@ -1447,25 +1471,25 @@ em {
   clear: both;
 }
 @media (min-width: 900px) {
-  /* line 639, src/style.scss */
+  /* line 663, src/style.scss */
   .history-year {
     max-height: 270px;
     max-width: 850px;
   }
 }
 
-/* line 663, src/style.scss */
+/* line 687, src/style.scss */
 a.history-link-mod {
   display: block;
 }
 
-/* line 667, src/style.scss */
+/* line 691, src/style.scss */
 .year-tz-img {
   width: 100%;
   margin-top: -1px;
 }
 @media (min-width: 900px) {
-  /* line 667, src/style.scss */
+  /* line 691, src/style.scss */
   .year-tz-img {
     float: left;
     max-width: 380px;
@@ -1473,32 +1497,32 @@ a.history-link-mod {
   }
 }
 
-/* line 678, src/style.scss */
+/* line 702, src/style.scss */
 .year-tz-txt-mod {
   padding: 25px 25px 30px 25px;
   text-align: left;
 }
 @media (min-width: 900px) {
-  /* line 678, src/style.scss */
+  /* line 702, src/style.scss */
   .year-tz-txt-mod {
     padding: 27px 20px 30px 420px;
   }
 }
-/* line 686, src/style.scss */
+/* line 710, src/style.scss */
 .year-tz-txt-mod .tz-h1 {
   color: #9f916f;
   margin-bottom: 15px;
 }
 
 /***  History-Post  ***/
-/* line 695, src/style.scss */
+/* line 719, src/style.scss */
 .history-aside {
   width: 100%;
   margin: 0 auto;
   position: static;
 }
 @media (min-width: 1117px) {
-  /* line 695, src/style.scss */
+  /* line 719, src/style.scss */
   .history-aside {
     top: 1100px;
     left: 36px;
@@ -1507,35 +1531,35 @@ a.history-link-mod {
   }
 }
 
-/* line 708, src/style.scss */
+/* line 732, src/style.scss */
 .caption-section-h {
   font: 800 25px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #000;
   margin-bottom: 15px;
 }
 
-/* line 714, src/style.scss */
+/* line 738, src/style.scss */
 .caption-h {
   font: 800 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #555;
 }
 
-/* line 719, src/style.scss */
+/* line 743, src/style.scss */
 .history-aside-ul {
   margin-bottom: 25px;
 }
 
-/* line 723, src/style.scss */
+/* line 747, src/style.scss */
 .history-aside-item {
   font: 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #888;
 }
-/* line 727, src/style.scss */
+/* line 751, src/style.scss */
 .history-aside-item:last-child {
   margin-bottom: 22px;
 }
 
-/* line 732, src/style.scss */
+/* line 756, src/style.scss */
 .history-post-img {
   margin-bottom: 25px;
 }
@@ -1543,7 +1567,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Raffle Page    						   		 */
 /* ============================================= */
-/* line 743, src/style.scss */
+/* line 767, src/style.scss */
 .raffle-list {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   border-top: 2px solid;
@@ -1551,7 +1575,7 @@ a.history-link-mod {
   border-color: #fff;
 }
 
-/* line 750, src/style.scss */
+/* line 774, src/style.scss */
 .raffle-list-mod {
   background-color: #fff;
   margin: 0 auto;
@@ -1561,19 +1585,25 @@ a.history-link-mod {
   -moz-box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
   margin-bottom: -85px;
-  max-width: 935px;
+  max-width: 800px;
   width: 100%;
-  padding: 50px 100px 60px 90px;
+  padding: 20px 20px 65px 20px;
   text-align: center;
 }
+@media (min-width: 550px) {
+  /* line 774, src/style.scss */
+  .raffle-list-mod {
+    padding: 50px 100px 60px 90px;
+  }
+}
 
-/* line 763, src/style.scss */
+/* line 791, src/style.scss */
 .raffle-list-item {
   font: 20px/200% "freight-text-pro";
   text-align: left;
 }
 
-/* line 768, src/style.scss */
+/* line 796, src/style.scss */
 .raffle-list-bg {
   background-color: #fff;
   height: 515px;
@@ -1590,30 +1620,42 @@ a.history-link-mod {
   position: absolute;
 }
 
+/* line 807, src/style.scss */
+.raffle-content p {
+  font: 17px/200% "freight-text-pro";
+  text-align: left;
+}
+@media (min-width: 700px) {
+  /* line 807, src/style.scss */
+  .raffle-content p {
+    font: 20px/200% "freight-text-pro";
+  }
+}
+
 /* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 786, src/style.scss */
+/* line 826, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 792, src/style.scss */
+/* line 832, src/style.scss */
 .ftr-logo {
   max-width: 515px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 798, src/style.scss */
+/* line 838, src/style.scss */
 .sponsors {
   background-color: #f5f5f3;
   margin: 0 auto;
   text-align: center;
 }
-/* line 803, src/style.scss */
+/* line 843, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -1627,34 +1669,68 @@ footer {
 /* line 356, src/partials/_layout.scss */
 .sponsors .sponsors-mod > .ui-block-1,
 .sponsors .sponsors-mod > .ui-block.first {
-  width: 22.5%;
+  width: 100%;
   display: inline;
   float: left;
 }
 /* line 362, src/partials/_layout.scss */
 .sponsors .sponsors-mod > .ui-block-2,
 .sponsors .sponsors-mod > .ui-block.second {
-  width: 72.5%;
+  width: 100%;
   display: inline;
   float: right;
   margin-right: 0;
 }
-/* line 808, src/style.scss */
+@media (min-width: 600px) {
+  /* line 843, src/style.scss */
+  .sponsors .sponsors-mod {
+    *zoom: 1;
+  }
+  /* line 38, ../../../../Applications/LiveReload.app/Contents/Resources/SASS.lrplugin/lib/compass/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+  .sponsors .sponsors-mod:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  /* line 356, src/partials/_layout.scss */
+  .sponsors .sponsors-mod > .ui-block-1,
+  .sponsors .sponsors-mod > .ui-block.first {
+    width: 22.5%;
+    display: inline;
+    float: left;
+  }
+  /* line 362, src/partials/_layout.scss */
+  .sponsors .sponsors-mod > .ui-block-2,
+  .sponsors .sponsors-mod > .ui-block.second {
+    width: 72.5%;
+    display: inline;
+    float: right;
+    margin-right: 0;
+  }
+}
+/* line 852, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 814, src/style.scss */
+/* line 858, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 1;
   -moz-columns: 1;
   -ms-columns: 1;
   -o-columns: 1;
   columns: 1;
+  margin-bottom: 25px;
+}
+@media (min-width: 600px) {
+  /* line 858, src/style.scss */
+  .sponsors .sponsors-list-mod {
+    margin-bottom: 0px;
+  }
 }
 @media (min-width: 900px) {
-  /* line 814, src/style.scss */
+  /* line 858, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 2;
     -moz-columns: 2;
@@ -1664,7 +1740,7 @@ footer {
   }
 }
 @media (min-width: 1200px) {
-  /* line 814, src/style.scss */
+  /* line 858, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 3;
     -moz-columns: 3;
@@ -1673,13 +1749,13 @@ footer {
     columns: 3;
   }
 }
-/* line 826, src/style.scss */
+/* line 875, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 832, src/style.scss */
+/* line 881, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -1687,21 +1763,28 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 839, src/style.scss */
+/* line 888, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 844, src/style.scss */
+/* line 893, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
   display: block;
   margin-top: -155px;
   margin-bottom: 25px;
+  display: none;
+}
+@media (min-width: 700px) {
+  /* line 893, src/style.scss */
+  .ftr-logo-bike {
+    display: block;
+  }
 }
 
-/* line 852, src/style.scss */
+/* line 906, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -1714,12 +1797,12 @@ footer {
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 869, src/style.scss */
+/* line 923, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 873, src/style.scss */
+/* line 927, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -1740,7 +1823,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 887, src/style.scss */
+/* line 941, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -1751,12 +1834,12 @@ footer {
   left: auto;
 }
 
-/* line 893, src/style.scss */
+/* line 947, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 897, src/style.scss */
+/* line 951, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -1777,7 +1860,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 911, src/style.scss */
+/* line 965, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
