--- a/views/sponsors.twig
+++ b/views/sponsors.twig
@@ -1,10 +1,7 @@
 <section class="sponsors">
 	<div class="page-mod">
 		<div class="sponsors-mod">
-			<div class="ui-block-1">
-				<img class="ftr-logo-bike" src="/wp-content/themes/spokes/images/ftr-logo-bike.png"/>
-				<a class="btn btn-large btn-donate">Join The List</a>
-			</div>
+			
 
 			<div class="ui-block-2">
 				<h4 class="section-h1">Our Business Sponsors</h4>
@@ -18,7 +15,11 @@
 						</li><!-- sponsor -->
 					{% endfor %}
 				</ul><!--sponsors mod -->
+			</div> <!-- /ui-block-2 -->
+			<div class="ui-block-1">
+				<img class="ftr-logo-bike" src="/wp-content/themes/spokes/images/ftr-logo-bike.png"/>
+				<a class="btn btn-large btn-donate">Join The List</a>
 			</div>
-		</div><!-- sponsors-mod -->
+ 		</div><!-- sponsors-mod -->
 	</div> <!-- /page-mod -->	 
 </section> <!-- /sponsors -->
