--- a/src/style.scss
+++ b/src/style.scss
@@ -344,6 +344,7 @@ em   	{	font-style: italic;	}
 	max-width: 780px;
 	width: 100%;
 	color: $bfc-gold;
+	margin-bottom: 20px;
 
 	@media (min-width: $medium) {
 		font: 600 32px/125% $freight-sans;
@@ -351,7 +352,29 @@ em   	{	font-style: italic;	}
 	}//mq
 }
 
-.team-signatures {
+.team-signature {
+	max-width: 120px;
+	width: 100%;
+	display: inline;
+	margin-right: 15px;
+
+	&:last-child {
+		margin-right: 0px;
+	}
+
+	img {
+		max-width: 95px;
+		width: 100%;
+	}
+
+	@media (min-width: 700px) {
+		img {
+			max-width: 111px;
+		}
+	}//mq
+}
+
+.team-signatures-orig {
 	max-width: 750px;
 	width: 100%;
 }
@@ -459,6 +482,7 @@ em   	{	font-style: italic;	}
 		font-size: 35px;
 	}//mq
 }
+
 
 
 
@@ -754,10 +778,14 @@ a.history-link-mod {
 	border-color: #eee;
 	@include box-shadow(0 0 30px rgba(0, 0, 0, 0.2));
 	margin-bottom: -85px;
-	max-width: 935px;
+	max-width: 800px;
 	width: 100%;
-	padding: 50px 100px 60px 90px;
+	padding: 20px 20px 65px 20px;
 	text-align: center;
+
+	@media (min-width: 550px) {
+		padding: 50px 100px 60px 90px;
+	}//mq
 }
 
 .raffle-list-item {
@@ -775,7 +803,19 @@ a.history-link-mod {
 	position: absolute; 			
 }
 
+.raffle-content {
+	p {
+		font: 17px/200% $freight-txt;
+		text-align: left;
 
+	@media (min-width: $medium) {
+		font: 20px/200% $freight-txt;
+	}//mq
+
+	}
+
+
+}
 
 /* ============================================= */
 
@@ -801,8 +841,12 @@ footer {
 	text-align: center;	
 
 	.sponsors-mod {
-		@include ui-grid-lr(25%, 75%, 5%);
+		@include ui-grid-lr(100%, 100%, 0%);
 		text-align: left;
+
+		@media (min-width: 600px) {
+			@include ui-grid-lr(25%, 75%, 5%);
+		}//mq
 	}
 
 	.section-h1 {
@@ -813,14 +857,19 @@ footer {
 
 	.sponsors-list-mod {
 		@include columns(1);
+		margin-bottom: 25px;
+
+		@media (min-width: 600px) {
+			margin-bottom: 0px;
+		}//mq
 
 		@media (min-width: $large) {
 			@include columns(2);
-		}		
+		}//mq		
 
 		@media (min-width: $x-large) {
 			@include columns(3);
-		}
+		}//mq
 	}
 
 	.sponsor-list-item {
@@ -847,6 +896,11 @@ footer {
 	display: block;
 	margin-top: -155px;
 	margin-bottom: 25px;
+	display: none;
+
+	@media (min-width: 700px) {
+		display: block;
+	}//mq
 }
 
 .site-credit {
