donate-btn link updated

--- a/views/home.twig
+++ b/views/home.twig
@@ -5,7 +5,7 @@
 		<section class="page-intro">
 			<h1 class="intro-h1 home-intro">Bikes Fight Cancer</h1>
 			<h2 class="intro-h2">{{intro.goal}}</h2>
-			<a class="btn btn-large btn-donate">Donate Today</a>
+			<a class="btn btn-large btn-donate" href="http://www2.pmc.org/profile/TP0083" target="_blank">Donate Today</a>
 		</section><!-- /page-intro -->	
 
 		<section class="page-sub-intro-home">
