--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -5,7 +5,7 @@
 	<section class="page-intro-raffle">
 			<h1 class="intro-h1 about-intro">Raffle Time!</h1>
 			<h2 class="intro-h2">{{post.intro}}</h2>
-			<a class="btn btn-donate">Get Lucky</a>
+			<a class="btn btn-donate" href="http://www2.pmc.org/profile/TP0083" target="_blank">Get Lucky</a>
 	</section><!-- /page-intro -->
 
 	<section class="page-sub-intro">
