--- a/views/footer.twig
+++ b/views/footer.twig
@@ -8,6 +8,6 @@
 
 	</div><!-- /page-mod -->
 	<div class="site-credit">
-		Site by Upstatement
+		<a href="http://www.upstatement.com" target="_blank">Site by Upstatement</a>
 	</div><!-- /site-credit -->	
 </footer>
