--- a/views/header.twig
+++ b/views/header.twig
@@ -3,9 +3,10 @@
     <div class="wrapper">
 		<a href="/"> <img class="nav-logo" src="/wp-content/themes/spokes/images/bfc-nav-logo.png"/> </a>
 
-        <nav id="access" role="navigation">
+        <nav id="access" class="large-nav" role="navigation">
            {{wp_nav_menu}}
         </nav><!-- #access -->
+        <a href="#"><img class="m-nav-toggle" src="/wp-content/themes/spokes/images/mobile-nav-icon.png" /></a>
     </div>
     {% endblock %}
 </header>
