--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Remove if you're not building a responsive site. (But then why would you do such a thing?) -->
 		<link rel="pingback" href="/xmlrpc.php" />
 		<script type="text/javascript" src="//use.typekit.net/kbo7gam.js"></script>
+		<link href="//cloud.webtype.com/css/8d31e9e6-df9a-4d18-871e-1bb1769b9c2e.css" rel="stylesheet" type="text/css" />		
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 		<script type="text/javascript">
