--- a/views/page-about.twig
+++ b/views/page-about.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<section class="page-intro-about">
-			<h1 class="intro-h1 about-intro">About Bikes Fight Cancer</h1>
+			<h1 class="intro-h1 home-intro">About BFC</h1>
 			<h2 class="intro-h2">{{post.intro}}</h2>
 			<a class="btn btn-donate" href="http://www2.pmc.org/profile/TP0083" target="_blank">Join the Fight</a>
 	</section><!-- /page-intro -->
