--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<section class="page-intro-history">
-			<h1 class="intro-h1 history-intro">History</h1>
+			<h1 class="intro-h1 home-intro">History</h1>
 			<h2 class="intro-h2">{{post.intro}}</h2>
 			<a class="btn btn-donate">Make History</a>
 	</section><!-- /page-intro -->	
@@ -15,7 +15,7 @@
 				<img class="year-tz-img" src="{{child.get_thumbnail.get_src}}"/>
 				<div class="year-tz-txt-mod">
 					<h5 class="tz-h1"><a href="{{child.permalink}}">{{child.title}}</a></h5>
-					<p class="tz-txt">{{child.get_preview(60)}}</p>
+					<p class="tz-txt">{{child.get_preview(25)}}</p>
 				</div><!-- /year-tz-txt-mod -->	
 		</article><!-- /history-year -->
 
