--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<section class="page-intro-raffle">
-			<h1 class="intro-h1 about-intro">Raffle Time!</h1>
+			<h1 class="intro-h1 home-intro">Raffle Time!</h1>
 			<h2 class="intro-h2">{{post.intro}}</h2>
 			<a class="btn btn-donate" href="http://www2.pmc.org/profile/TP0083" target="_blank">Get Lucky</a>
 	</section><!-- /page-intro -->
@@ -20,7 +20,7 @@
 		<div class="page-mod"> 
 			<div class="raffle-list-mod"> 
 
-				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
+				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-raffle.png">
 				<h4 class="section-h1">The 2013 Raffle</h4>
 
 				<div class="raffle-content">
