--- a/views/header.twig
+++ b/views/header.twig
@@ -3,11 +3,11 @@
     <div class="wrapper">
     	<div class="nav-chrome">
 			<a href="/"> <img class="nav-logo" src="/wp-content/themes/spokes/images/bfc-nav-logo.png"/> </a>
-	        <a href=""><img class="m-nav-toggle" src="/wp-content/themes/spokes/images/mobile-nav-icon.png" /></a>
+	        <a href="#" class="m-nav-toggle"></a>
     	</div><!-- /nav-chrome -->
     	<nav id="access" class="large-nav" role="navigation">
-	           {{wp_nav_menu}}
-	        </nav><!-- #access -->
+	       {{wp_nav_menu}}
+	    </nav><!-- #access -->
     </div><!-- /wrapper -->
     {% endblock %}
 </header>
