--- a/views/footer.twig
+++ b/views/footer.twig
@@ -2,10 +2,15 @@
 
 <footer id="footer">
 	<div class="page-mod">
-		<img class="ftr-logo" src="/wp-content/themes/spokes/images/ftr-logo.png"/>
-
-		{{ footer.footer.post_content }}
-
+		<div class="ftr-mod">
+			<div class="ftr-logo-mod ui-block-1">
+				<h5 class="ftr-h1">Bikes Fight Cancer</h5>
+				{{ footer.footer.post_content }}
+			</div><!-- /ftr-logo-mod -->	
+			<div class="mailing-list-mod ui-block-2">
+				<h5 class="email-h1">Email List</h5>
+			</div><!-- /mailing-list-mod -->
+		</div><!-- /ftr-mod -->	
 	</div><!-- /page-mod -->
 	<div class="site-credit">
 		<a href="http://www.upstatement.com" target="_blank">Site by Upstatement</a>
