ftr details working out

--- a/src/style.scss
+++ b/src/style.scss
@@ -202,6 +202,8 @@ em   	{	font-style: italic;	}
 	font: 25px/125% $giza;
 	letter-spacing: 3px;
 	text-transform: uppercase;
+	display: block;
+	margin-bottom: 40px;	
 }
 
 .ftr-h1 {
