--- a/views/footer.twig
+++ b/views/footer.twig
@@ -8,7 +8,11 @@
 				{{ footer.footer.post_content }}
 			</div><!-- /ftr-logo-mod -->	
 			<div class="mailing-list-mod ui-block-2">
-				<h5 class="email-h1">Email List</h5>
+				<div class="input">
+					<label for="mailing-list" class="email-h1">E-mail List</label>
+					<input type="email" value="" name="email" class="required email" id="mailing-list">
+					<input type="submit" value="Submit" name="subscribe" id="mailing-list-subscribe" class="button btn">
+				</div><!-- /input -->	
 			</div><!-- /mailing-list-mod -->
 		</div><!-- /ftr-mod -->	
 	</div><!-- /page-mod -->
