--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -4,6 +4,7 @@
 
 	<section class="page-intro-history">
 			<h1 class="intro-h1 home-intro">History</h1>
+			<img class="intro-stars" src="/wp-content/themes/spokes/images/intro-stars.png" />			
 			<h2 class="intro-h2">{{post.intro}}</h2>
 			<a class="btn btn-donate">Make History</a>
 	</section><!-- /page-intro -->	
