--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -4,6 +4,7 @@
 
 	<section class="page-intro-raffle">
 			<h1 class="intro-h1 home-intro">Raffle Time!</h1>
+			<img class="intro-stars" src="/wp-content/themes/spokes/images/intro-stars.png" />
 			<h2 class="intro-h2">{{post.intro}}</h2>
 			<a class="btn btn-donate" href="http://www2.pmc.org/profile/TP0083" target="_blank">Get Lucky</a>
 	</section><!-- /page-intro -->
