history aside fixed up. history pages populated and in reverse cron

--- a/views/page.twig
+++ b/views/page.twig
@@ -19,7 +19,7 @@
 			
 	</div> <!-- /post-content-mod -->	
 
-	<section class="raffle-history">
+	<section class="raffle-history history-aside">
 		{% if post.sponsors %}
 			<h4 class="caption-section-h">Raffle Winners</h4>
 			{{post.winners}}	
