--- a/src/style.scss
+++ b/src/style.scss
@@ -276,14 +276,6 @@ em   	{	font-style: italic;	}
 			border-bottom: 1px solid;
 			border-color: #222;
 
-			@media (min-width: $medium) {
-				display: inline;
-				margin-right: 3px;
-				background-color: #000;
-				padding: 2px 8px;
-				border-bottom: 0px;
-			}//mq
-
 			&:last-child {
 				margin-right: 0px;
 				border-bottom: 0px;
@@ -291,8 +283,24 @@ em   	{	font-style: italic;	}
 
 			&:hover {
 				color: $bfc-green;
-				background-color: #333333;
+				background-color: #333;
 			}//hover
+
+			@media (min-width: $medium) {
+				display: inline;
+				margin-right: 3px;
+				background-color: #000;
+				padding: 2px 8px;
+				border-bottom: 0px;
+
+				&:hover {
+					background-color: #121212;
+				}//hover
+			}//mq
+
+			
+
+		
 		}//li
 	}//menu-main-nav
 }//#access 
@@ -405,7 +413,7 @@ em   	{	font-style: italic;	}
 	text-align: center;	
 	padding-top: 110px;
 	background-size: 1080px;
-	margin-bottom: 10px;
+	margin-bottom: 3px;
 
 	@media (min-width: $small) {
 		padding-top: 227px;	
@@ -609,9 +617,6 @@ em   	{	font-style: italic;	}
 	}//mq
 }
 
-
-
-
 /* ============================================= */
 
 /*	About       						   		 */ 
@@ -753,17 +758,28 @@ em   	{	font-style: italic;	}
 		margin-bottom: 28px;
 	}
 
-	> img {
+	.size-full {
+		max-width:779px;
 		width: 100%;
-	}
+		height: auto;
+	} // wp-image fix
 
 	.section-h1 {
 		font-size: 18px;
-		margin-bottom: 40px;
+		margin-bottom: 25px;
 	}
 
-	@media (min-width:$small) {
+	@media (min-width: 500px) {
+		padding: 30px;
+	}//MQ
+
+	@media (min-width: 600px) {
 		padding: 30px 80px 80px 80px;
+
+		.section-h1 {
+			margin-bottom: 40px;
+		}
+
 	}//MQ
 }//post-conenter-mod
 
@@ -847,22 +863,32 @@ a.history-link-mod {
 /***  History-Post  ***/     						   		 
 
 .history-aside {
-	width: 100%;
 	margin: 0 auto;
 	position: static;
+	line-height: 20px;
+	color: #555;
+	max-width: 779px;
+	width: 100%;
+	padding: 0px 80px 80px 80px;
 
-	@media (min-width: 1117px){
+
+	@media (min-width: 1150px){
 		top: 1100px;
-		left: 36px;
+		left: 4%;
 		position: absolute;
 		max-width: 200px;
+		padding: 0px;
+	}
+
+	@media (min-width: 1300px){
+		left: 10%;
 	}
 }
 
 .caption-section-h {
-	font: 800 25px/150% $freight-sans;
-	color: #000;
-	margin-bottom: 15px;
+	font: 800 23px/150% $freight-sans;
+	color: #444;
+	margin: 40px 0px 15px 0px; 
 }
 
 .caption-h {
