--- a/views/footer.twig
+++ b/views/footer.twig
@@ -10,7 +10,7 @@
 			<div class="mailing-list-mod ui-block-2">
 				<div class="input">
 					<label for="mailing-list" class="email-h1">E-mail List</label>
-					<input type="email" value="" name="email" class="required email" id="mailing-list">
+					<input type="email" value="" name="email" placeholder="Enter your email address" class="required email" id="mailing-list">
 					<input type="submit" value="Submit" name="subscribe" id="mailing-list-subscribe" class="button btn">
 				</div><!-- /input -->	
 			</div><!-- /mailing-list-mod -->
